[tool.poetry]
name = "robot-framework-arduino-daq-lib"
version = "0.1.0"
description = "Arduino DAQ library for Robot Framework"
authors = ["Fedor Chervyakov <fchervyakov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
robotframework = "^4.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
